--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <link rel="stylesheet" type="text/css" href="css/bulma"/>
+</head>
 <body>
     <h1>Dasboard</h1>
     <div id="content"></div>    
