--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
         <a onclick="show_hide_navbar()" id="nav-logo">Tendermint Metrics</a>
         <div class="navbar">
           <a class="btn" href="/">Dashboard</a>
-          <a class="btn" href="/load_metrics">Load</a>
+          <a class="btn" >Load</a>
           <a class="btn" href="/clean_cache">Delete</a>
         </div>
       </div>
