--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,7 @@
             
     async function loadJson(){
         try {
-            await fetch('http://localhost:3000/send_json').then(res => res.json()).then(json =>  data = json);
+            await fetch('https://aakatev.me/tendermint_json').then(res => res.json()).then(json =>  data = json);
         }
         catch(er) {
             console.log(er);
